# gitdocsify-extension

./: .dockerignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: documentation_generator.py  endpoints.py  github.py  openai.py
backend/src/app/core/: documentation_generator.py  github.py  jwt.py  openai.py  supabase.py
backend/src/app/core/prompts/: code_extraction_prompt.txt  documentation_generator_prompt.txt  file_selection_prompt.txt  readme_prompt.txt
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  AppWrapper.tsx  background.js  contentScript.tsx  index.css  main.tsx
frontend/src/assets/: loading.css  notifications.css  preview.css
frontend/src/assets/CSS/: animated_background.css  dot_grid.css  (+1 more)
frontend/src/components/: CollaboratorsStack.tsx  ColorModeSwitcher.tsx  DashboardHeader.tsx  DocumentationConfiguration.tsx  DroppableBox.tsx  FileStructureTab.tsx  Footer.tsx  LanguageProgressBar.tsx  RepoCard.tsx  SectionDialogBox.tsx  SortableItem.tsx  ToastNotification.tsx  TopMenu.tsx
frontend/src/context/: NotificationContext.tsx  UserContext.tsx
frontend/src/lib/: supabase.ts
frontend/src/pages/: Dashboard.tsx  LandingPage.tsx  LoadingScreen.tsx  Login.tsx  RepoView.tsx
frontend/src/types/: additional_data.ts  repository.ts  section.ts  user.ts
frontend/src/utils/: ProtectedRoute.tsx  axios.ts  languageColors.ts  sectionOptions.ts  user.ts
(+23 files in other folders)
