[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro Hernandez",email = "alejandrohernandezsantos01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "src/app" }
]