[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro Hernandez",email = "alejandrohernandezsantos01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "supabase (>=2.11.0,<3.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "openai (>=1.68.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "src/app" }
]